--- a/exchange.css
+++ b/exchange.css
@@ -1,4 +1,4 @@
-/* General Body Styling */
+/* My General Body Styling */
 body {
     margin: 0;
     padding: 0;
@@ -15,7 +15,7 @@ body {
     flex-direction: column;
 }
 
-/* Smooth Background Animation */
+/* Animation */
 @keyframes backgroundAnimation {
     0% {
         background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/currency_2.jpg');
@@ -34,7 +34,7 @@ body {
     }
 }
 
-/* Header Section */
+/* Header  */
 header {
     text-align: center;
     padding: 20px;
@@ -113,7 +113,7 @@ button:active {
     transform: scale(0.95);
 }
 
-/* Results Section */
+/* Results */
 .currencyResult,
 .resultCurrency {
     text-align: center;
@@ -123,7 +123,7 @@ button:active {
     color: #333;
 }
 
-/* Footer Section */
+/* Footer */
 .footer {
     text-align: center;
     padding: 10px;
@@ -133,7 +133,7 @@ button:active {
     font-size: 1rem;
 }
 
-/* Responsive Design */
+/* Responsiveness */
 @media (max-width: 768px) {
     header h1 {
         font-size: 2rem;
